--- a/sporticus/templates/index.html
+++ b/sporticus/templates/index.html
@@ -7,7 +7,7 @@
 NFL Teams
 </h1>
 <ul>
- {% for key, value in data.items %}
+ {% for key, value in team_data.items %}
  <li>
     {{key}}: {{value}}
  </li>
