--- a/src/components/Dropdown/DropDown.css
+++ b/src/components/Dropdown/DropDown.css
@@ -1,6 +1,8 @@
-.DropdownTeam {
+.Dropdown {
     position: relative;
-    display: inline;
+    float:left;
+    padding: 5px;
+    
 }
 
 .rdn-control {
@@ -15,8 +17,9 @@
     outline: none;
     padding: 8px 52px 8px 10px;
     transition: all 200ms ease;
-    min-width: 0;
+    min-width: 300px;
     display: inline-block;
+
 }
 
 .rdn-drop, .rdn-selection {
@@ -28,7 +31,7 @@
     overflow-y: auto;
     position: absolute;
     top: 100%;
-    width: 100%;
+    min-width: 100%;
     z-index: 1000;
 }
 
@@ -36,9 +39,9 @@
     box-sizing: border-box;
     color: 333;
     cursor: pointer;
-    display: block;
+    display: inline-block;
     padding: 2px 10px;
-    min-width: 50%;
+    min-width: 100%;
 }
 
 .rdn-drop-menu-option.is-selected, .rdn-drop-menu-group-option.is-selected, .rdn-selection-menu-option.is-selected, .rdn-selection-menu-group-option.is-selected {
@@ -69,4 +72,8 @@
     right: 25px;
     top: 25%;
     width: 0;
+}
+
+.rdn-control-placeholder{
+    content: "test";
 }
