--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,25 @@
-.topnav {
+.Header {
   width: 100%;
+  height: 150px;
   margin: 0;
   padding: 10px;
-  background-color: var(--gray_1);
-  display: inline-block;
+  background-color: rgb(31, 31, 31);
+  display: block;
 }
 
-.nav-link {
-  margin: 0 20px;
-  color: var(--crimson_1);
+.Logo {
+  margin: auto;
+  padding: 20px 0px;
+  width: 50%;
+  display: block;
+  flex-direction: row;
+}
+
+.img {
+  display: block;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 80%;
+  height: auto
 }
