--- a/src/components/ScheduleTable/ScheduleTable.css
+++ b/src/components/ScheduleTable/ScheduleTable.css
@@ -1,8 +1,8 @@
-.ContainerStatsTable {
+.ContainerST {
+  overflow-x:scroll;
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   padding: 30px;
-  overflow: hidden;
 }
 
 .ContainerNoData {
@@ -12,7 +12,7 @@
   padding: 30px;
 }
 
-.StatsTable {
+.ScheduleTable {
   position: absolute;
   overflow: hidden;
 }
