--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,5 +21,26 @@
   top: 0;
   bottom: 0;
   width: 80%;
-  height: auto
+  height: auto;
+  background-color: var(--gray_1);
+  display: flex;
+  list-style: none;
+}
+
+.main-nav {
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  background-color: var(--gray_1);
+  display: flex;
+  list-style: none;
+}
+
+.nav-link {
+  margin: 0 20px;
+  color: var(--crimson_1);
+}
+
+.push {
+  margin-left: auto;
 }
