--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,20 +1,36 @@
 .profile-info {
-  margin: 15px;
-  padding: 15px;
+  margin: 10px;
+  padding: 10px;
   display: block;
 }
 
 .profile-item {
   display: block;
-  margin: 30px 0px;
+  margin: 10px 0px;
+  text-decoration: underline;
 }
 
 .save {
-  padding: 8px;
+  padding: 10px;
   background-color: var(--gray_1);
   cursor: pointer;
 }
 
-.dropdown {
-  margin-left: 20px;
+.profile-item-save {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+}
+input[type=text] {
+  width: 10%;
+  padding: 5px 5px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid gray;
+  border-radius: 4px;
 }
