--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,64 @@
-.About {
-  background-color: gray;
-  height: auto;
-  align-items: center;
+.stats-container {
+  margin: 0 auto;
+  padding: 20px 0px;
+  width: 70%;
+  display: block;
 }
+
+h1 {
+  font-family: "Arial";
+  color: rgb(40, 41, 41);
+  position: relative;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 50px;
+
+  font-size: 50px;
+}
+
+h2 {
+  font-family: "Arial";
+  color: rgb(40, 41, 41);
+  position: relative;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-size: 30px;
+}
+
+.vertical-container{
+  font-family: "Arial";
+  color: rgb(40, 41, 41);
+  position: relative;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  orientation: vertical;
+}
+
+.container {
+  font-family: "Arial";
+  color: rgb(40, 41, 41);
+  position: relative;
+  text-align: center;
+  orientation: horizontal;
+  display: inline-block;
+}
+
+b {
+  font-family: "Arial";
+  color: rgb(40, 41, 41);
+  position: relative;
+  text-align: center;
+  font-size: 25px;
+  padding: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: 3px solid #4287f5;
+  overflow-wrap: anywhere;
+  word-break: normal;
+  display: inline-block;
+
+}
+
+
